--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libs/jogamp-all-platforms/jar/gluegen-rt.jar" sourcepath="C:/Program Files/eclipse/libs/jogamp-all-platforms/lib/windows-amd64"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libs/jogamp-all-platforms/jar/jogl-all.jar" sourcepath="C:/Program Files/eclipse/libs/jogamp-all-platforms/lib/windows-amd64"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JOGL"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
