Classes melhor organizadas. Enums para rendertype e displaytype já definidos. Rendertypes já feitos. Faltam os display.

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -6,3 +6,10 @@
 /Object.class
 /Shap.class
 /Shape.class
+/BuildObject$displayTipes.class
+/BuildObject$displayTypes.class
+/objects/
+/menus/
+/objectVisualizer.class
+/objectVisualizer$1$1.class
+/objectVisualizer$1.class
